# assets

cmd/: markdown.md
components/tkinter/spinbox/: main.py
components/web/progress/spinner/: index.html
components/web/spinbox/: index.html
components/web/spinbox/js/: index.js
components/web/spinbox/templates/: spinbox.html
config/: .editorconfig
modules/: hash_map.c  linked_list.c  queue.c  stack.c
modules/child_process/: cameraHandler.js  cameraHandler.py  main.js
modules/localEventProcess/: MySocket.js  main.js  main.js.bak
modules/ui-component/tkinter/spinbox/: spinbox.py
modules/ui-component/web/spinbox/css/: style.css  variable.css
modules/ui-component/web/spinbox/js/: Spinbox.js  utils.js
modules/ui-component/web/spinner/: index.html  package-lock.json  package.json
modules/ui-component/web/spinner/css/: selector.css  style.css  variable.css
modules/ui-component/web/zoom/: index.css  index.js  package-lock.json  package.json
modules/utils/: decimalToBytes.js  decimal_to_bytes.py  etc.ts  sphereCoordinatesSystem.js
notes/: CANable-linux.md  CapsLock-linux.md  curl-windows.md  git.md  linux.md  markdown.md  media_query.txt  pm2.md  pyenv-linux.md  scss.scss  svn.md  tensorflow.md
pattern/addon/: binding.gyp  package-lock.json  package.json  tsconfig.json
pattern/addon/src/: main.ts  module.d.ts
pattern/addon/src/native/: main.cpp
pattern/addon_c/: addon.c  binding.gyp  package-lock.json  package.json
pattern/addon_cpp/: addon.cpp  binding.gyp  main.js
pattern/theme/: index.html  package-lock.json  package.json
pattern/theme/src/: dark.scss  default.scss  light.scss  main.ts  style.scss
patterns/child_process/: cameraHandler.js  cameraHandler.py  main.js
patterns/localEventProcess/: test.js
project-init/py/tkinter/: settings.json
project-init/py/tkinter/src/: h_spinbox.py  renderer.py  settings.py
project-init/python-tkinter/src/: main.py  path.py
project-init/ros2/base/src/camera/: CMakeLists.txt  package.xml
project-init/ros2/base/src/camera/src/: CameraNode.cpp
project-init/ros2/base/src/generator/: CMakeLists.txt
project-init/ros2/base/src/generator/src/: main.cpp
project-init/ros2/base/src/image_processor/: package.xml
project-init/ros2/base/src/image_processor/include/image_processor/: ImageProcessorNode.hpp
project-init/ros2/base/src/interfaces/: CMakeLists.txt  package.xml
project-init/ros2/can/scripts/: build.sh  start-workstation.sh  start.sh
project-init/ros2/can/src/can_driver/: CMakeLists.txt  package.xml
project-init/ros2/can/src/can_driver/include/can_driver/: CanDriver.hpp
project-init/ros2/can/src/can_driver/src/: CanDriver.cpp
project-init/ros2/can/src/gateway/: package.xml
project-init/ros2/can/src/gateway/include/gateway/: GatewayNode.hpp
project-init/ros2/can/src/gateway/src/: GatewayNode.cpp
project-init/ros2/can/src/interfaces/: CMakeLists.txt  package.xml
project-init/ros2/can/src/interfaces/include/interfaces/: constants.hpp
project-init/ros2/can/src/interfaces/msg/: Example.msg
project-init/ros2/can/src/interfaces/srv/: Example.srv
project-init/ros2/can/src/sensor/: CMakeLists.txt  package.xml
project-init/ros2/can/src/sensor/include/sensor/: SensorNode.hpp
project-init/ros2/can/src/sensor/src/: SensorNode.cpp  main.cpp
project-init/ros2/can/src/workstation/: CMakeLists.txt
project-init/ros2/can/src/workstation/include/workstation/: WorkstationNode.hpp
project-init/ros2/can/src/workstation/src/: WorkstationNode.cpp  main.cpp
project-init/ros2_ws/: cmd.txt
project-init/ros2_ws/src/camera/: CMakeLists.txt  package.xml
project-init/ros2_ws/src/camera/include/camera/: CameraNode.hpp
project-init/ros2_ws/src/camera/src/: CameraNode.cpp  main.cpp
project-init/ros2_ws/src/generator/: package.xml
project-init/ros2_ws/src/image_processor/: CMakeLists.txt
project-init/ros2_ws/src/image_processor/src/: ImageProcessorNode.cpp  main.cpp
project-init/ros2_ws/src/interfaces/: CMakeLists.txt
project-init/ros2_ws/src/motor/: CMakeLists.txt  package.xml
project-init/ros2_ws/src/motor/include/motor/: MotorNode.hpp
project-init/ros2_ws/src/motor/src/: MotorNode.cpp  main.cpp
project-init/ros2_ws_can/src/gateway/: CMakeLists.txt
project-init/ros2_ws_can/src/gateway/src/: GatewayNode.cpp  main.cpp
project-init/ros2_ws_can/src/interfaces/: CMakeLists.txt
project-init/ros2_ws_can/src/workstation/: CMakeLists.txt  package.xml
project-init/ros2_ws_can/src/workstation/include/workstation/: WorkstationNode.hpp
project-init/ros2_ws_can/src/workstation/src/: main.cpp
project-init/ts-vite-electron/: package-lock.json  package.json
project-init/ts-vite-web/: index.html  package-lock.json  package.json
project-init/ts-vite-web/src/: style.css
project-init/ts/vite-electron/: package-lock.json  package.json
project-init/ts/vite-react/src/: App.scss  App.tsx  main.tsx
project-init/ts/vite-web/src/: style.scss
project-init/typescript-debug/: README.md  package-lock.json  package.json  tsconfig.json
project-init/typescript-debug/src/: index.ts
project-init/typescript-electron/: package-lock.json  package.json  tsconfig.json
project-init/typescript-electron/src/: index.html  main.ts  preload.ts
project-init/typescript-electron/src/assets/: style.css
project-init/typescript-electron/src/ts/: index.ts
project-init/typescript-web/: package-lock.json  package.json  tsconfig.json
project-init/typescript-web/src/: index.html
project-init/typescript-web/src/ts/: index.ts
project-init/vite-react/: index.html  package-lock.json  package.json
project-init/vite-react/src/: main.scss
project-init/vite-react/src/layouts/: DefaultLayout.tsx  EmptyLayout.tsx
project-init/vite-react/src/routes/: index.tsx
project-init/vite-react/src/util/: math.test.ts  math.ts
study/thread_pool/: .gitignore  Makefile.win  ThreadPool.cpp  ThreadPool.h  thread_pool.cpp  thread_pool.dev  thread_pool.layout
utils/: datetime.js  debounce.ts  isBinaryFile.js  sphereVector3System.js  substr.c
utils/zoom/: index.html
(+23 files in other folders)
