<?xml version="1.0"?>
<package format="3">
    <name>image_processor</name>
    <version>0.0.1</version>
    <description>Image_processor ROS2 C++ package</description>

    <maintainer email="hn@example.com">hn</maintainer>

    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_depend>interfaces</build_depend>
    <exec_depend>interfaces</exec_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
