<?xml version="1.0"?>
<package format="3">
    <name>can_driver</name>
    <version>0.0.1</version>
    <description>can_driver ROS2 C++ package</description>

    <maintainer email="hn@example.com">hn</maintainer>

    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
